RESOLVED FIXED49549
[GTK] gdk_pixbuf_get_from_surface from GtkVersioning.h is broken on GTK+ 2 builds
https://bugs.webkit.org/show_bug.cgi?id=49549
Summary [GTK] gdk_pixbuf_get_from_surface from GtkVersioning.h is broken on GTK+ 2 bu...
Martin Robinson
Reported 2010-11-15 10:37:15 PST
The line: g_return_val_if_fail(!surface, NULL); is incorrectly causing the method to fail if the surface is not null. The condition should be reversed. This causes problems loading custom cursors. For example, loading LayoutTests/fast/blockflow/broken-ideographic-font.html causes many CRITICAL GLib assertions when trying to select the vertically oriented text.
Attachments
Patch for this issue (1.49 KB, patch)
2010-11-15 10:43 PST, Martin Robinson
kling: review+
Martin Robinson
Comment 1 2010-11-15 10:43:58 PST
Created attachment 73910 [details] Patch for this issue
Andreas Kling
Comment 2 2010-11-15 12:12:45 PST
Comment on attachment 73910 [details] Patch for this issue LGTM.
Martin Robinson
Comment 3 2010-11-15 12:17:22 PST
Note You need to log in before you can comment on or make changes to this bug.