2010-11-15  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Andreas Kling.

        [GTK] gdk_pixbuf_get_from_surface from GtkVersioning.h is broken on GTK+ 2 builds
        https://bugs.webkit.org/show_bug.cgi?id=49549

        No new tests. This can be verified by loading any existing vertical text test
        in GtkLauncher and noticing the lack of CRITICAL GLib exceptions. There's currently
        no automatic way of verifying custom cursors.

        * platform/gtk/GtkVersioning.c:
        (gdk_pixbuf_get_from_surface): Reverse a sanity check in this method to be correct.

Canonical link: https://commits.webkit.org/62491@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72020 268f45cc-cd09-0410-ab3c-d52691b4dbfc